added lang and LOGO

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <header>
     <title>Landing page</title>
     <meta charset="utf-8">
@@ -10,7 +10,9 @@
 
     <div class="hero">
       <div class="header">
-	<span class="logo"></span>
+	<span class="logo">
+	  LOGO
+	</span>
 	<a href="file:///home/">header link one </a>
 	<a href="file:///home/">header link two </a>
 	<a href="file:///home/">header link three </a>
